--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ async-timeout==4.0.2
 attrs==22.2.0
 beautifulsoup4==4.11.2
 certifi==2022.12.7
+gunicorn==20.1.0
 charset-normalizer==3.0.1
 Django==4.0.6
 django-cors-headers==3.13.0
